src/test/ui/const-eval/union-ub.stderr
error[E0080]: this constant likely exhibits undefined behavior
  --> $DIR/union-ub.rs:36:1
   |
LL | const BAD_BOOL: bool = unsafe { DummyUnion { u8: 42 }.bool};
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered 42, but expected something in the range 0..=1
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be ovezealous. Please open an issue on the rust compiler repository if you believe it should not be considered undefined behavior

error[E0080]: this constant likely exhibits undefined behavior
  --> $DIR/union-ub.rs:39:1
   |
LL | const BAD_UNION: Foo = unsafe { Bar { u8: 42 }.foo };
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered union whose bit pattern matches none of its 2 fields
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be ovezealous. Please open an issue on the rust compiler repository if you believe it should not be considered undefined behavior

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
